<resources>
    <string name="app_homepage">www.simlar.org</string>
    <string name="app_name">Simlar</string>
    <string name="button_continue">Continue</string>
    <string name="button_cancel">Cancel</string>
    <string name="main_activity_contactlist_loading_contacts">Loading contacts</string>
    <string name="main_activity_contactlist_error_loading_contacts">Error: Failed to load contacts. Are you online?</string>
    <string name="main_activity_contactlist_no_contacts_found">No contacts found.</string>
    <string name="main_activity_menu_reload_contacts">Reload contacts</string>
    <string name="main_activity_menu_upload_logfile">Report bug</string>
    <string name="main_activity_menu_enable_debug_mode">Enable debug mode</string>
    <string name="main_activity_menu_disable_debug_mode">Disable debug mode</string>
    <string name="main_activity_menu_delete_account">Delete my credentials and quit</string>
    <string name="main_activity_menu_fake_telephone_book">Screenshot telephone book</string>
    <string name="main_activity_menu_fake_telephone_book_disable">Regular telephone book</string>
    <string name="main_activity_menu_tell_a_friend">Invite friends</string>
    <string name="main_activity_menu_show_about">About</string>
    <string name="main_activity_alert_upload_log_file_title">Really report bug?</string>
    <string name="main_activity_alert_upload_log_file_text">This will upload a log file. Afterwards you will be asked to write an email describing the bug.\n\nDo you want to continue?</string>
    <string name="main_activity_alert_uploading_log_file_failed_title">Error</string>
    <string name="main_activity_alert_uploading_log_file_failed_text">Log file creation failed => abort sending</string>
    <string name="main_activity_alert_enable_linphone_debug_mode_title">Really enable debug mode?</string>
    <string name="main_activity_alert_enable_linphone_debug_mode_text">This will increase log file entries a lot. Only do so if you have been asked for it by a Simlar developer. Or you really know what you are doing.</string>
    <string name="main_activity_tell_a_friend_chooser_title">Invite friends</string>
    <string name="main_activity_tell_a_friend_subject">Simlar</string>
    <string name="main_activity_tell_a_friend_text">Let\'s make free and encrypted calls with Simlar: https://www.simlar.org/download</string>
    <string name="upload_log_file_send_email_to_developer">Send email to developer</string>
    <string name="upload_log_file_progress">Uploading log file&#8230;</string>
    <string name="google_play_services_helper_alert_unavailable_title">Google Play Services unavailable</string>
    <string name="google_play_services_helper_alert_unavailable_text">Your device doesn\'t have Google Play Services installed. This is mandatory for running Simlar. Install them to run Simlar.</string>
    <string name="google_play_services_helper_alert_unavailable_button_close_simlar">Close Simlar</string>
    <string name="linphone_call_state_notification_initializing">initializing</string>
    <string name="linphone_call_state_notification_calling">calling %1$s</string>
    <string name="linphone_call_state_notification_receiving_call">%1$s is calling you</string>
    <string name="linphone_call_state_notification_talking">talking to %1$s</string>
    <string name="linphone_call_state_notification_ended">call with %1$s ended</string>
    <string name="linphone_call_state_notification_paused">paused call with %1$s</string>
    <string name="linphone_call_state_notification_resuming">resuming call with %1$s ended</string>
    <string name="network_quality_good">good</string>
    <string name="network_quality_average">average</string>
    <string name="network_quality_poor">poor</string>
    <string name="network_quality_very_poor">very poor</string>
    <string name="network_quality_unusable">unusable</string>
    <string name="network_quality_unknown">unknown</string>
    <string name="call_activity_label_quality">Network Quality: </string>
    <string name="call_activity_sound_settings">Sound Settings</string>
    <string name="call_activity_microphone_mute">Microphone mute</string>
    <string name="call_activity_microphone_on">Microphone on</string>
    <string name="call_activity_microphone_disabled">Microphone disabled</string>
    <string name="call_activity_loudspeaker_on">Loudspeaker</string>
    <string name="call_activity_loudspeaker_off">Loudspeaker off</string>
    <string name="call_activity_terminate_call">Terminate call</string>
    <string name="call_activity_not_encrypted">WARNING: This call is NOT encrypted!</string>
    <string name="call_activity_button_accept_unencrypted_call">Quiet alarm</string>
    <string name="call_activity_no_authentication_token">&#8230;</string>
    <string name="call_activity_verified_authentication_token">Verified Code: </string>
    <string name="call_activity_please_verify_authentication_token">Has the person you are speaking to the same code?</string>
    <string name="call_activity_button_authentication_token_verify">safe connection</string>
    <string name="call_activity_button_authentication_token_wrong">I don\'t care</string>
    <string name="call_activity_connecting_to_server">Connecting to server&#8230;</string>
    <string name="call_activity_connecting_to_server_timed_out">Connecting to server timed out</string>
    <string name="call_activity_outgoing_connecting">Waiting for contact&#8230;</string>
    <string name="call_activity_outgoing_ringing">Ringing&#8230;</string>
    <string name="call_activity_encrypting">Encrypting&#8230;</string>
    <string name="call_activity_talking">Talking&#8230;</string>
    <string name="call_activity_call_ended_because_declined">Call declined</string>
    <string name="call_activity_call_ended_because_user_offline">Contact is offline</string>
    <string name="call_activity_call_ended_because_incompatible_media">Incompatible media type</string>
    <string name="call_activity_call_ended_because_user_busy">Busy</string>
    <string name="call_activity_call_ended_normally">Call ended</string>
    <string name="connection_details_activity_label_quality">Quality: </string>
    <string name="connection_details_activity_label_codec">Codec: </string>
    <string name="connection_details_activity_label_ice_state">ICE State: </string>
    <string name="connection_details_activity_label_upload">Up: </string>
    <string name="connection_details_activity_label_download">Down: </string>
    <string name="connection_details_activity_label_packet_loss">Loss: </string>
    <string name="connection_details_activity_label_late_packets">Late: </string>
    <string name="connection_details_activity_label_round_trip_delay">Delay: </string>
    <string name="connection_details_activity_label_jitter">Jitter: </string>
    <string name="connection_details_activity_kbytes_per_second">kb/s</string>
    <string name="connection_details_activity_milli_seconds">ms</string>
    <string name="connection_details_activity_percent">&#65285;</string>
    <string name="verify_number_activity_title">Creating account</string>
    <string name="verify_number_activity_verify_your_number">Verify your telephone number:</string>
    <string name="verify_number_activity_put_in_your_number">Enter your telephone number:</string>
    <string name="verify_number_activity_button_register">Continue</string>
    <string name="verify_number_activity_sms_announcement">In order to register, Simlar will send an SMS to this number during the next step.</string>
    <string name="verify_number_activity_alert_wrong_number_text">The number you have entered doesn\'t seem to be a telephone number. Check it again.</string>
    <string name="volumes_control_activity_title">Volumes Control Activity</string>
    <string name="volumes_control_activity_software_echo_limiter">Software Echo Limiter</string>
    <string name="about_activity_title">About Simlar</string>
    <string name="about_activity_copyright">&#169; 2013&#8211;2014 The Simlar authors\nAll rights reserved.</string>
    <string name="about_activity_license">License: GNU General Public License\nhttp://www.gnu.org/licenses/old-licenses/gpl-2.0.html</string>
    <string name="about_activity_privacy_statement_and_terms_of_use"><a href="https://www.simlar.org/datenschutzerklaerung/">privacy statement</a>\nand\n<a href="https://www.simlar.org/nutzungsbedingungen/">terms of use</a></string>
    <string name="create_account_activity_title">Creating account</string>
    <string name="create_account_activity_request">Request account creation</string>
    <string name="create_account_activity_sms_text">Welcome to Simlar! If the app asks for a registration code, use: *CODE*. Otherwise you do not need this SMS.</string>
    <string name="create_account_activity_waiting_for_sms">Waiting for SMS</string>
    <string name="create_account_activity_waiting_for_sms_manual">Manual input of registration code</string>
    <string name="create_account_activity_confirm">Confirm account creation</string>
    <string name="create_account_activity_first_login">First login</string>
    <string name="create_account_activity_error_wrong_telephonenumber">It\'s not possible to create a Simlar account with the number you provided:\n%1$s\n\nTry another number and contact the mailing list.</string>
    <string name="create_account_activity_error_sms">We are currently not able to send an SMS to the number you provided:\n%1$s\n\nCheck your number or try again later.</string>
    <string name="create_account_activity_error_sms_timeout">Waiting for SMS timed out.\n\nIs this really your number?\n%1$s\n\nIf you received the registration SMS, enter the code manually:</string>
    <string name="create_account_activity_error_not_possible">Account creation is not possible at the moment.\n\nTry again later.</string>
    <string name="create_account_activity_error_registration_code">The registration code is invalid.\n\nTry again.</string>
    <string name="create_account_activity_error_too_many_confirms">Account confirmation is not possible anymore.\n\nStart again.</string>
    <string name="create_account_activity_error_sip_not_possible">Couldn\'t connect to server.\n\nTry again later.</string>
    <string name="create_account_activity_button_cancel">Cancel</string>
    <string name="create_account_activity_button_confirm">Confirm</string>
    <string name="ringing_activity_title">is calling you</string>
    <string name="ringing_activity_phone_is_ringing">your phone is ringing</string>
    <string name="agree_activity_title">Create Account</string>
    <string name="agree_activity_welcome">Welcome to Simlar!</string>
    <string name="agree_activity_accept">I agree</string>
    <string name="agree_activity_cancel">Cancel</string>
    <string name="agree_activity_privacy_statement_and_terms_of_use">Do you agree to the\n<a href="https://www.simlar.org/datenschutzerklaerung/">privacy statement</a>\n and\n<a href="https://www.simlar.org/nutzungsbedingungen/">terms of use</a>?</string>
    <string name="missed_call_notification">missed call</string>
</resources>