<!--
  Copyright (C) 2013 The Simlar Authors.

  This file is part of Simlar. (https://www.simlar.org)

  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/calling_title_background_black"
    tools:context=".CallActivity" >

    <ImageView
        android:id="@+id/contactImage"
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:src="@drawable/contact_picture"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/contactName"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_toRightOf="@+id/contactImage"
        android:gravity="bottom"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/calling_title_text_white"
        android:textIsSelectable="true" />

    <LinearLayout
        android:id="@+id/linearLayoutCallStatus"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_below="@+id/contactName"
        android:layout_toRightOf="@+id/contactImage"
        android:gravity="top"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewCallStatus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/call_activity_outgoing_connecting"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/calling_title_text_white" />

        <TextView
            android:id="@+id/textViewCallTimer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="00:00"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/calling_title_text_white"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dip"
        android:background="@drawable/background"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_big"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/linearLayoutConnectionQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp" >

            <LinearLayout
                android:id="@+id/linearLayoutConnectionQualityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/background_white" >

                <TextView
                    android:id="@+id/textViewLabelQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/call_activity_label_quality"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textViewQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:paddingRight="5dp"
                    android:text="@string/network_quality_good"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutConnectionDetailsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/linearLayoutConnectionQualityText"
                tools:ignore="ObsoleteLayoutParam" >

                <ImageButton
                    android:id="@+id/buttonConnectionDetails"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:contentDescription="@string/call_activity_sound_settings"
                    android:onClick="showConnectionDetails"
                    android:src="@drawable/button_info" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutVerifiedAuthenticationToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutConnectionQuality"
            android:layout_centerHorizontal="true"
            android:background="@color/background_white"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textViewLabelVerifiedAuthenticationToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/call_activity_verified_authentication_token"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewVerifiedAuthenticationToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:paddingRight="5dp"
                android:text="@string/call_activity_no_authentication_token"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutAuthenticationToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayoutConnectionQuality"
            android:layout_marginLeft="@dimen/activity_call_inner_side_margin"
            android:layout_marginRight="@dimen/activity_call_inner_side_margin"
            android:background="@drawable/border_round_corners"
            android:orientation="vertical"
            android:padding="9dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/textViewLabelAuthenticationToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/call_activity_please_verify_authentication_token"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewAuthenticationToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/call_activity_no_authentication_token"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <Button
                    android:id="@+id/buttonAuthenticationTokenVerify"
                    style="@style/buttonWhiteWithIcon"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/button_ok"
                    android:onClick="verifyAuthenticationToken"
                    android:text="@string/call_activity_button_authentication_token_verify" />

                <Button
                    android:id="@+id/buttonAuthenticationTokenWrong"
                    style="@style/buttonWhiteWithIcon"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/button_cancel"
                    android:onClick="wrongAuthenticationToken"
                    android:text="@string/call_activity_button_authentication_token_wrong" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutUnencryptedCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayoutConnectionQuality"
            android:layout_centerInParent="false"
            android:layout_marginLeft="@dimen/activity_call_inner_side_margin"
            android:layout_marginRight="@dimen/activity_call_inner_side_margin"
            android:background="@drawable/border_round_corners"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textViewUnencryptedCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/call_activity_not_encrypted"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/buttonAcceptUnencryptedCall"
                style="@style/buttonWhite"
                android:onClick="acceptUnencryptedCall"
                android:padding="8dp"
                android:text="@string/call_activity_button_accept_unencrypted_call" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCallEndReason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayoutConnectionQuality"
            android:layout_centerInParent="false"
            android:layout_marginLeft="@dimen/activity_call_inner_side_margin"
            android:layout_marginRight="@dimen/activity_call_inner_side_margin"
            android:background="@drawable/border_round_corners"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textViewCallEndReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/call_activity_call_ended_normally"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ButtonTerminateCall"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/activity_call_inner_side_margin"
                android:layout_marginRight="@dimen/activity_call_inner_side_margin"
                android:background="@drawable/border_round_corners"
                android:baselineAligned="false"
                android:gravity="center_vertical|center_horizontal"
                tools:ignore="UselessParent" >

                <ImageButton
                    android:id="@+id/buttonSoundSettings"
                    style="@style/buttonWhiteBorderLess"
                    android:layout_marginRight="25dp"
                    android:contentDescription="@string/call_activity_sound_settings"
                    android:onClick="showSoundSettingsDialog"
                    android:src="@drawable/sound_settings" />

                <ImageButton
                    android:id="@+id/buttonMicro"
                    style="@style/buttonWhiteBorderLess"
                    android:contentDescription="@string/call_activity_microphone_mute"
                    android:onClick="toggleMicrophoneMuted"
                    android:src="@drawable/micro_on" />

                <ImageButton
                    android:id="@+id/buttonSpeaker"
                    style="@style/buttonWhiteBorderLess"
                    android:layout_marginLeft="25dp"
                    android:contentDescription="@string/call_activity_loudspeaker_off"
                    android:onClick="toggleSpeakerMuted"
                    android:src="@drawable/speaker_off" />
            </LinearLayout>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/ButtonTerminateCall"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_red"
            android:contentDescription="@string/call_activity_terminate_call"
            android:onClick="terminateCall"
            android:src="@drawable/hang_up_phone" />
    </RelativeLayout>

</RelativeLayout>
